--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -8,7 +8,9 @@
     <div class="project featured-project">
       <div class="title">
         <h3>My Portfolio</h3>
-        <a class="github-link" href="https://github.com/Jayabratha/my-portfolio"><i class="icon-social-github"></i></a>
+        <a class="github-link" href="https://github.com/Jayabratha/my-portfolio">        
+          <span>my-portfolio</span><i class="icon-social-github"></i>
+        </a>
       </div>
       <div class="desc">This project is my personal portfolio showcaseing my art works, projects and blog</div>
       <div class="tags">
@@ -38,8 +40,11 @@
       <li class="project project-card view-check below-view" appJsOnscroll [viewportCheck]=true [padding]=100
         [checkAboveView]=false>
         <div class="title">
-          <h3>MEAN Demo App</h3>
-          <a class="github-link" href="https://github.com/Jayabratha/mean-demo-app"><i class="icon-social-github"></i></a>
+          <h3>MEAN Mess Manager</h3>
+          <a class="github-link" href="https://github.com/Jayabratha/mean-demo-app">
+            <span>mean-demo-app</span>
+            <i class="icon-social-github"></i>
+          </a>
         </div>
         <div class="desc">This project is my first full-stack app using MEAN (MongoDB, ExpressJS, AngularJS, NodeJS)
           technologies. </div>
@@ -72,10 +77,13 @@
         [checkAboveView]=false>
         <div class="title">
           <h3>Material Demo App</h3>
-          <a class="github-link" href="https://github.com/Jayabratha/mean-mat-demo"><i class="icon-social-github"></i></a>
+          <a class="github-link" href="https://github.com/Jayabratha/mean-mat-demo">
+            <span>mean-microservices-app</span>
+            <i class="icon-social-github"></i>
+          </a>
         </div>
         <div class="desc">This project is developed using Angular Material where design is the main focus using custom
-          theme.</div>
+          theme. Development of the backend using microservices architecture is in progress.</div>
         <div class="tags">
           <ul class="tag-list">
             <li>
@@ -87,7 +95,35 @@
           </ul>
         </div>
         <div class="footer">
-          <a href="https://github.com/Jayabratha/mean-mat-demo">
+          <a href="https://github.com/Jayabratha/mean-microservices-demo">
+            <div class="button-wrapper">
+              <div class="background"></div>
+              <button routerLink="/projects">VIEW PROJECT</button>
+            </div>
+          </a>
+        </div>
+      </li>
+      <li class="project project-card view-check below-view" appJsOnscroll [viewportCheck]=true [padding]=100
+        [checkAboveView]=false>
+        <div class="title">
+          <h3>Angular Carousel</h3>
+          <a class="github-link" href="https://github.com/Jayabratha/js-angular-carousel">
+            <span>js-angular-carousel</span>
+            <i class="icon-social-github"></i>
+          </a>
+        </div>
+        <div class="desc">
+          This is highly customizable resuable carousel component built for Angular and supports touch gestures. 
+        </div>
+        <div class="tags">
+          <ul class="tag-list">
+            <li>
+              <div class="tag-color angular"></div>angular
+            </li>
+          </ul>
+        </div>
+        <div class="footer">
+          <a href="https://github.com/Jayabratha/js-angular-carousel">
             <div class="button-wrapper">
               <div class="background"></div>
               <button routerLink="/projects">VIEW PROJECT</button>
