--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -93,13 +93,12 @@
 }
 
 .main-footer {
-    position: absolute;
+    position: relative;
     width: 100%;
     height: 6em;
     margin-top: 2em;
     text-align: center;
     padding-top: 1em;
-    bottom: 0;
 }
 
 .logo-section {
