--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <me-card></me-card>
-<div class="main-content">
+<main class="main-content">
   <router-outlet></router-outlet>
   <footer class="main-footer">
   </footer>
-</div>
+</main>
