--- a/src/app/me-card/me-card.component.html
+++ b/src/app/me-card/me-card.component.html
@@ -36,12 +36,12 @@
                 <js-ng-carousel [slideItems]=slideList [play]=play [config]="carouselConfig" [style.width.%]="100" [style.height.%]="100" (carouselReady)="onCarouselReady($event)"
                     (carouselLoading)="onCarouselLoadProgress($event)"></js-ng-carousel>
             </div>
-            <div class="my-card-wrapper">
+            <div class="info-wrapper">
                 <h1 class="name">Jayabratha Saha</h1>
                 <div class="title">Artist & Developer</div>
-                <div class="github-link">
+                <a class="github-link" href="https://github.com/Jayabratha">
                     <i class="icon-social-github"></i>
-                </div>
+                </a>
             </div>
         </div>
     </section>
