--- a/src/app/art/art.component.css
+++ b/src/app/art/art.component.css
@@ -28,12 +28,14 @@
     color: #ffff;
     font-size: 2em;
     padding: 25px;
-    -webkit-transition: transform 0.2s linear;
-    transition: transform 0.2s linear;
-    transform: translate3d(0, 16em, 0);
+    opacity: 0;
+    transform: translate3d(0, 6em, 0);
+    -webkit-transition: transform 0.2s ease-in, opacity 0.5s;
+    transition: transform 0.2s ease-in, opacity 0.5s;
 }
 
 .image-wrapper:hover .image-title {
+    opacity: 1;
     transform: translate3d(0, 0, 0);
 }
 
