--- a/src/app/me-card/me-card.component.css
+++ b/src/app/me-card/me-card.component.css
@@ -698,7 +698,7 @@ h1.name {
     }
     /* Show Menu Styles - End */
 
-    .my-dp {
+    .dp.my-dp {
         height: 94vw;
     }
     .logo-section i {
