--- a/src/app/me-card/me-card.component.html
+++ b/src/app/me-card/me-card.component.html
@@ -46,13 +46,17 @@
         </div>
     </section>
     <div class="search-result-wrapper center-stage" [hidden]="!headerState.showSearch">
-        <div class="initial-message" [hidden]="resultsPage">
+        <div class="initial-message" [hidden]="!(isSearchAvailable && resultsPage)">
             <i class="icon-ios-search"></i>
             <div>Type in above to see matched content</div>
         </div>
-        <div class="initial-message" [hidden]="!noResults">
+        <div class="initial-message" [hidden]="!isSearchAvailable && !noResults">
             <i class="icon-ios-information-outline"></i>
             <div>No results found! Try some other keywords</div>
+        </div>
+        <div class="initial-message" [hidden]="isSearchAvailable">
+            <i class="icon-ios-information-outline"></i>
+            <div>Ops! Search is temporarily unavailable</div>
         </div>
         <ul class="search-results">
             <li [@fadeIn]="''" *ngFor="let result of searchResults" tabindex="-1" #searchResult>
