--- a/src/app/art/art.component.css
+++ b/src/app/art/art.component.css
@@ -1,21 +1,28 @@
+.image-item {
+    overflow: hidden;
+}
+
 .image-wrapper {
     position: relative;
-    overflow: hidden;
-    margin: 1px;
     height: 60vw;
     max-height: 20em;
     cursor: pointer;
+    opacity: 1;
+    margin: 1px;
+    overflow: hidden;
+    transform: translate3d(0, 0, 0);
+    -webkit-transition: all 0.5s linear;
+    transition: all 0.5s linear;
 }
 
 .image-wrapper img {
     position: relative;
     height: 100%;
     opacity: 1;
-    transform: translate3d(0, 0, 0);
-    -webkit-transition: all 0.5s linear;
-    transition: all 0.5s linear;
     -webkit-transform: scale3d(1, 1, 1);
     transform: scale3d(1, 1, 1);
+    -webkit-transition: transform 0.5s linear;
+    transition: transform 0.5s linear;
 }
 
 .image-wrapper .image-title {
@@ -34,17 +41,25 @@
     transition: transform 0.2s ease-in, opacity 0.5s;
 }
 
+.image-wrapper .shadow {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    box-shadow: 0 0 100px 1px rgba(0,0,0,0.25) inset;
+}
+
 .image-wrapper:hover .image-title {
     opacity: 1;
     transform: translate3d(0, 0, 0);
 }
 
 .image-wrapper:hover img {
-    -webkit-transform: scale3d(1.1, 1.1, 1);
-    transform: scale3d(1.1, 1.1, 1);
+    -webkit-transform: scale3d(1.05, 1.05, 1);
+    transform: scale3d(1.05, 1.05, 1);
 }
 
-.image-wrapper img.hide {
+.image-wrapper.hide {
     opacity: 0;
     transform: translate3d(0, 200px, 0);
 }
