--- a/src/app/gallery/gallery.component.css
+++ b/src/app/gallery/gallery.component.css
@@ -7,7 +7,7 @@
     background: #000;
     z-index: 10;
     opacity: 0;
-    transition: opacity 0.5s;
+    transition: opacity 0.2s;
 }
 
 .gallery.show {
@@ -21,16 +21,20 @@
 }
 
 .image-container .thumb {
-    position: absolute;
+    position: fixed;
     transition: all 0.1s ease-out;
 }
 
-.image-container .thumb.center {
+.image-container .image {
+    position: relative;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;    
     margin: auto;
+    height: 100%;
+    transition: width 0.1s ease-out;
+    overflow: hidden;
 }
 
 .image-container .file-item {
