--- a/src/app/gallery/gallery.component.css
+++ b/src/app/gallery/gallery.component.css
@@ -3,14 +3,19 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
-    background: #000;
-    z-index: 10;
-    opacity: 0;
-    transition: opacity 0.2s;
+    height: 100%;   
+    z-index: 10;    
 }
 
-.gallery.show {
+.background {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    opacity: 0;
+}
+
+.background.show {
     opacity: 1;
 }
 
@@ -22,7 +27,7 @@
 
 .image-container .thumb {
     position: fixed;
-    transition: all 0.1s ease-out;
+    transition: all 0.2s ease-out;
 }
 
 .image-container .image {
@@ -146,6 +151,7 @@
     position: fixed;
     top: 0;
     bottom: 0;
+    z-index: 20;
 }
 
 .image-info-panel {
