Style Updates for Responsiveness on 4k

--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -26,7 +26,7 @@
     width: 48%;
     min-height: 300px;
     background: #FFFFFF;
-    padding: 1.5em;
+    padding: 1.5em 1.5em 4em;
     border: thin solid #efefef;
     box-shadow: 0 3px 10px rgba(56, 55, 55, 0.06);
     font-family: Roboto;
