--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,7 +9,7 @@
 /* Route Components Base Styles - Start */
 
 .main-content {
-    margin-top: 61px;
+    margin-top: 3.8em;
 }
 
 .content {
@@ -27,8 +27,8 @@
 }
 
 .content-wrapper {
-    padding: 15px 0;
-    min-height: 25em;
+    padding: 1.2em 0;
+    min-height: 2em;
 }
 
 .content h2 {
