--- a/src/app/common.styles.css
+++ b/src/app/common.styles.css
@@ -1,6 +1,6 @@
 .center-stage {
-    width: 80%;
-    max-width: 55em;
+    width: 65%;
+    min-width: 55em;
     margin-left: auto;
     margin-right: auto;
 }
@@ -167,6 +167,7 @@ ul.site-nav-list li.show {
 @media (max-width: 950px) {
     .center-stage {
         width: 96%;
+        min-width: 0;
     }
 }
 /* Tab Styles - End */
