--- a/src/app/me-card/me-card.component.css
+++ b/src/app/me-card/me-card.component.css
@@ -3,28 +3,32 @@
     width: 100%;
     background: #fff;
     min-height: 38em;
-    box-shadow: 0 2px 20px rgba(0,0,0,.1);
+    box-shadow: 0 0.125em 20px rgba(0, 0, 0, .1);
     transition: min-height 0.5s ease-out;
 }
+
 .absolute-bottom {
     position: absolute;
     bottom: 0;
     left: 0;
     right: 0;
 }
+
 .logo-menu {
     position: absolute;
     top: 0;
-    margin: 11px auto;
+    margin: 0.65em auto;
     left: 0;
     right: 0;
 }
-.menu-section, .logo-section {
+
+.menu-section,
+.logo-section {
     position: relative;
     display: inline-block;
     vertical-align: top;
-    width: 50px;
-    height: 38px;
+    width: 3em;
+    height: 2.35em;
     background: #212121;
     opacity: 1;
     transition: background-color 0.5s, margin 0.5s, opacity 0.5s;
@@ -32,30 +36,37 @@
     cursor: pointer;
     z-index: 3;
 }
+
 .menu-section {
     background: transparent;
 }
-.menu-icon, .menu-icon-top, .menu-icon-bottom {
+
+.menu-icon,
+.menu-icon-top,
+.menu-icon-bottom {
     position: absolute;
     background-color: #212121;
-    top: 19px;
-    margin-left: 5px;
+    top: 1.2em;
+    margin-left: 0.3em;
     left: 0;
-    width: 28px;
-    height: 2px;
+    width: 1.8em;
+    height: 0.125em;
     content: '';
     -webkit-transition: all .5s;
     transition: all .5s;
 }
+
 .logo-section {
-    margin-left: -53px;
+    margin-left: -3em;
 }
+
 .search-button {
     float: right;
     font-size: 1.8em;
     margin: 4px 8px;
     color: #212121;
 }
+
 .hello-card {
     position: absolute;
     width: 100%;
@@ -77,7 +88,7 @@
 
 .me-card-wrapper {
     position: relative;
-    padding-top: 160px;
+    padding-top: 10em;
     box-sizing: content-box;
     left: 0;
     right: 0;
@@ -89,7 +100,7 @@
 
 .menu-background {
     position: fixed;
-    top: 59px;
+    top: 3.7em;
     width: 100%;
     height: 100vh;
     z-index: 2;
@@ -104,7 +115,7 @@
     left: 0;
     right: 0;
     background: linear-gradient(140deg, #ff9800, #f31b48, #940590, #0ab779);
-    transition: transform 0.5s ease-out, width 1s ease-out, opacity 0.5s ease-out; 
+    transition: transform 0.5s ease-out, width 1s ease-out, opacity 0.5s ease-out;
 }
 
 .my-dp {
@@ -160,7 +171,9 @@ h1.name {
 }
 
 /* Initial Header Styles - Start */
-.initial-header .menu-section, .initial-header .logo-menu {
+
+.initial-header .menu-section,
+.initial-header .logo-menu {
     opacity: 0;
     transition: none;
 }
@@ -176,7 +189,7 @@ h1.name {
 
 .initial-header .my-dp,
 .initial-header .info-wrapper,
-.initial-header .site-nav-list>li  {
+.initial-header .site-nav-list>li {
     opacity: 0;
 }
 
@@ -184,18 +197,21 @@ h1.name {
     padding-top: 0;
     padding-bottom: 0;
 }
+
 /* Initial Header Styles - End */
 
 /* Fixed n Search Header Styles - Start */
+
 .main-header.fix-header,
 .main-header.search-header {
     position: fixed;
     width: 100%;
-    min-height: 61px;
-    height: 61px;
+    min-height: 3.8em;
+    height: 3.8em;
     z-index: 10;
     top: 0;
 }
+
 .fix-header .hello-card,
 .search-header .hello-card {
     display: none;
@@ -204,26 +220,35 @@ h1.name {
 .fix-header .logo-section {
     margin-left: 0;
 }
+
 .fix-header .menu-icon-top {
-    top: 11px;
+    top: 0.7em;
 }
+
 .fix-header .menu-icon-bottom {
-    top: 27px;
+    top: 1.7em;
 }
+
 .search-header .logo-section {
-    margin-left: -50px;
+    margin-left: -3em;
 }
+
 .search-header .menu-icon-top {
-    top: 19px;
+    top: 1.2em;
 }
+
 .search-header .menu-icon-bottom {
-    top: 19px;
+    top: 1.2em;
+}
+
+.search-header .logo-section {
+    opacity: 0;
 }
 
 .fix-header .me-card-wrapper,
 .search-header .me-card-wrapper {
-    padding-top: 59px;
-    height: 2px;
+    padding-top: 3.7em;
+    height: 0.125em;
 }
 
 .fix-header .my-dp,
@@ -244,7 +269,7 @@ h1.name {
 .fix-header .site-nav,
 .mobile .site-nav {
     position: absolute;
-    top: 59px;
+    top: 3.7em;
     height: 0;
     margin: 0 auto;
     left: 0;
@@ -255,7 +280,7 @@ h1.name {
 }
 
 .mobile .site-nav {
-    height: 2px;
+    height: 0.125em;
 }
 
 .show-menu .site-nav {
@@ -298,6 +323,7 @@ h1.name {
 /* Fixed Header Styles - End */
 
 /* Show Menu Styles - Start */
+
 .mobile.show-menu .logo-section {
     z-index: 1;
     opacity: 0;
@@ -319,15 +345,17 @@ h1.name {
 .search-header .me-card {
     position: relative;
 }
-.mobile.show-menu .my-card>*
-.fix-header.show-menu .my-card>*,
+
+.mobile.show-menu .my-card>* .fix-header.show-menu .my-card>*,
 .search-header .my-card>* {
     display: none;
 }
+
 .mobile.show-menu .site-nav,
 .fix-header.show-menu .site-nav {
     height: 35em;
 }
+
 .mobile.show-menu ul.site-nav-list,
 .fix-header.show-menu ul.site-nav-list {
     opacity: 1;
@@ -341,7 +369,7 @@ h1.name {
 
 .mobile.show-menu .menu-icon-top,
 .fix-header.show-menu .menu-icon-top {
-    top: 19px;
+    top: 1.2em;
     -webkit-transform: rotate(135deg);
     -moz-transform: rotate(135deg);
     -o-transform: rotate(135deg);
@@ -350,7 +378,7 @@ h1.name {
 
 .mobile.show-menu .menu-icon-bottom,
 .fix-header.show-menu .menu-icon-bottom {
-    top: 19px;
+    top: 1.2em;
     -webkit-transform: rotate(-135deg);
     -moz-transform: rotate(-135deg);
     -o-transform: rotate(-135deg);
@@ -361,12 +389,14 @@ h1.name {
 .mobile.show-menu .menu-icon-bottom {
     background: #FFFFFF;
 }
+
 /* Show Menu Styles - End */
 
 /* Nav Highlighter - Start */
+
 .nav-highlighter {
-    position: relative; 
-    height: 2px;
+    position: relative;
+    height: 0.125em;
     left: 0;
     width: 0;
     background: #FFFFFF;
@@ -374,50 +404,60 @@ h1.name {
     -moz-transition: all 0.5s ease-out;
     transition: all 0.5s ease-out;
 }
+
 .nav-highlighter.art {
     background: #f31b48;
     left: 0;
     width: 20%;
 }
+
 .nav-highlighter.projects {
     background: #c6116b;
     left: 20%;
     width: 20%;
 }
+
 .nav-highlighter.blog {
     background: #940590;
     left: 40%;
     width: 20%;
 }
+
 .nav-highlighter.about {
     background: #28a6e4;
     left: 60%;
     width: 20%;
 }
+
 .nav-highlighter.contact {
     background: #0ab779;
     left: 80%;
     width: 20%;
 }
+
 .fix-header .nav-highlighter-wrapper {
     display: none;
 }
+
 /* Nav Highlighter - End */
 
 /* Logo Style - Start */
+
 .logo-section i {
     color: #FFFFFF;
 }
 
 .icon-logo-svg:before {
     content: "a";
-    margin-top: -3px;
+    margin-top: -0.03em;
     display: block;
-    font-size: 50px;
+    font-size: 3em;
 }
+
 /* Logo Style - Start */
 
 /* Search Style - Start */
+
 .search-wrapper {
     position: absolute;
     display: inline-block;
@@ -435,9 +475,9 @@ h1.name {
 
 .search-input {
     float: right;
-    width: 40px;
+    width: 2em;
     padding: 0;
-    height: 38px;
+    height: 2.5em;
     -webkit-transition: width 0.5s ease-out;
     -moz-transition: width 0.5s ease-out;
     transition: width 0.5s ease-out;
@@ -448,8 +488,8 @@ h1.name {
     height: 100%;
     width: 100%;
     background: #f5f4f4;
-    box-shadow: 0 -10px 25px 0px rgba(0,0,0,0.05) inset;
-    padding: 0 0 0 40px;
+    box-shadow: 0 -10px 25px 0px rgba(0, 0, 0, 0.05) inset;
+    padding: 0 0 0 2.5em;
     opacity: 0;
     font-size: 1em;
     font-family: 'Roboto', sans-serif;
@@ -461,9 +501,11 @@ h1.name {
 .search-header .search-input {
     width: 100%;
 }
+
 .search-header .search-input input {
     opacity: 1;
 }
+
 .search-header .menu-section {
     opacity: 0;
 }
@@ -511,7 +553,7 @@ h1.name {
     padding: 0.5em 1em;
     border: thin solid #ebebeb;
     background: #FFFFFF;
-    box-shadow: 0 5px 20px rgba(0,0,0,.1);
+    box-shadow: 0 5px 20px rgba(0, 0, 0, .1);
     cursor: pointer;
     transition: transform .2s ease-in-out;
 }
@@ -539,58 +581,53 @@ h1.name {
     text-transform: uppercase;
     letter-spacing: 0.25em;
 }
+
 /* Search Style - End */
 
 /* Mobile Styles - Start */
+
 @media (max-width: 650px) {
     .logo-menu {
-        margin: 2.75vw auto;
         padding: 1px 3px;
     }
-    .logo-section, .menu-icon, .menu-icon-top, .menu-icon-bottom{
+    .logo-section,
+    .menu-icon,
+    .menu-icon-top,
+    .menu-icon-bottom {
         background-color: #FFFFFF;
     }
     .menu-section {
         z-index: 5;
     }
-
     .logo-section {
         margin-left: 0;
     }
-
     .search-wrapper {
         opacity: 0;
         width: 100%;
         z-index: 1;
     }
-
     .search-input {
         width: 100%;
     }
-
     .search-header .search-wrapper,
-    .show-menu .search-wrapper {    
+    .show-menu .search-wrapper {
         opacity: 1;
         z-index: 3;
     }
-
     .mobile.show-menu .search-button {
         color: #FFFFFF;
     }
-
     .search-wrapper button {
         font-size: 1.2em;
     }
-
-    .search-header  .search-wrapper .search-input {
+    .search-header .search-wrapper .search-input {
         width: 100%;
     }
-
     .search-header .logo-section,
     .search-header .menu-section {
         opacity: 0;
     }
-
     .menu-icon-top {
         top: 11px;
     }
@@ -625,24 +662,24 @@ h1.name {
         font-size: 10px;
         padding-left: 2em;
     }
-
     .site-nav {
         display: none;
     }
-
     /* Fixed & Search Header Styles - Start */
     .main-header.fix-header {
         overflow: visible;
+        height: 4.2em;
+        min-height: 4.2em;
     }
-    .fix-header .logo-section, 
+    .fix-header .logo-section,
     .search-header .logo-section {
         background: #212121;
     }
-    .fix-header .menu-icon, 
-    .fix-header .menu-icon-top, 
+    .fix-header .menu-icon,
+    .fix-header .menu-icon-top,
     .fix-header .menu-icon-bottom,
-    .search-header .menu-icon, 
-    .search-header .menu-icon-top, 
+    .search-header .menu-icon,
+    .search-header .menu-icon-top,
     .search-header .menu-icon-bottom {
         background: #212121;
     }
@@ -662,16 +699,20 @@ h1.name {
         display: block;
         position: absolute;
     }
+    .fix-header .me-card-wrapper,
+    .search-header .me-card-wrapper {
+        padding-top: 4.1em;
+        height: 0.125em;
+    }
     .fix-header.show-menu .my-card,
     .search-header.show-menu .my-card {
         height: 43.5em;
     }
     /* Fixed Header Styles - End */
-
     /* Initial Header Styles - Start */
     .initial-header .me-card {
         transform: translateY(40px);
-        opacity: 0;      
+        opacity: 0;
     }
     .initial-header .info-wrapper {
         position: relative;
@@ -684,7 +725,6 @@ h1.name {
         margin-top: 0;
     }
     /* Initial Header Styles - End */
-
     /* Show Menu Styles - Start */
     .show-menu .my-dp {
         opacity: 0;
@@ -697,7 +737,6 @@ h1.name {
         color: #FFFFFF;
     }
     /* Show Menu Styles - End */
-
     .dp.my-dp {
         height: 94vw;
     }
