Updating default above viewport check to false

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,6 @@
 <div class="content about-content center-stage">
   <h1>About</h1>
-  <div class="content-wrapper view-check clearfix below-view" appJsOnscroll [viewportCheck]=true [checkAboveView]=false>
+  <div class="content-wrapper view-check clearfix below-view" appJsOnscroll [viewportCheck]=true  >
     <div class="main">
       <h2>Hi! I am Jayabratha Saha, friends call me Jay.</h2>
       <i class="icon-android-compass"></i>
@@ -23,7 +23,7 @@
       </p>
     </div>
   </div>
-  <section class="my-tiles view-check below-view" appJsOnscroll [viewportCheck]=true [padding]=100 [checkAboveView]=false
+  <section class="my-tiles view-check below-view" appJsOnscroll [viewportCheck]=true [padding]=100  
     (enteredViewport)="animateSkills()">
     <h2>Tech Skills</h2>
     <div class="skills-wrapper">
@@ -61,7 +61,7 @@
           </li>
         </ul>
       </div>
-      <p class="sub-desc below-view" appJsOnscroll [viewportCheck]=true [padding]=500 [checkAboveView]=false>
+      <p class="sub-desc below-view" appJsOnscroll [viewportCheck]=true [padding]=500  >
         I am currently working on MEAN stack technologies specializing on front-end including TypeScript, Angular along
         with base web technologies. I have also experience in working with Ionic and Firebase.
       </p>
@@ -71,7 +71,7 @@
     <h2>Work Experience</h2>
     <div class="exp-container">
       <ul>
-        <li appJsOnscroll [viewportCheck]=true [padding]=100 [checkAboveView]=false>
+        <li appJsOnscroll [viewportCheck]=true [padding]=100  >
           <div #expItem class="exp-wrapper clearfix">
             <div class="logo-wrapper">
               <img src="assets/sgm-logo.png" />
@@ -90,7 +90,7 @@
             </div>
           </div>
         </li>
-        <li appJsOnscroll [viewportCheck]=true [padding]=100 [checkAboveView]=false>
+        <li appJsOnscroll [viewportCheck]=true [padding]=100  >
           <div #expItem class="exp-wrapper clearfix">
             <div class="logo-wrapper">
               <img src="assets/tcs-logo.png" />
