--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,6 +1,6 @@
 <div class="content contact-content center-stage">
   <h1>Contact</h1>
-  <div class="content-wrapper view-check clearfix below-view" appJsOnscroll [viewportCheck]=true [checkAboveView]=false>
+  <div class="content-wrapper view-check clearfix below-view" appJsOnscroll [viewportCheck]=true  >
     <div class="main">
       <h2>Send me an email here</h2>
       <i class="icon-paper-airplane"></i>
@@ -45,7 +45,7 @@
       </form>
     </div>
   </div>
-  <section class="my-tiles view-check below-view" appJsOnscroll [viewportCheck]=true [padding]=100 [checkAboveView]=false
+  <section class="my-tiles view-check below-view" appJsOnscroll [viewportCheck]=true [padding]=100  
     (enteredViewport)="animateTiles()">
     <div class="tiles-wrapper">
       <h2>Follow me on</h2>
