--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,6 +1,6 @@
 <div class="content projects-content center-stage">
   <h1>Projects</h1>
-  <div class="content-wrapper clearfix view-check below-view" appJsOnscroll [viewportCheck]=true [checkAboveView]=false>
+  <div class="content-wrapper clearfix" appJsOnscroll [viewportCheck]=true>
     <div class="main">
       <h2>My hobby projects</h2>
       <i class="icon-social-github"></i>
@@ -33,12 +33,11 @@
       </div>
     </div>
   </div>
-  <section class="all-projects-container view-check below-view" appJsOnscroll [viewportCheck]=true [padding]=100
-    [checkAboveView]=false>
+  <section class="all-projects-container" >
     <h2>All projects</h2>
     <ul class="project-list">
       <li class="project project-card view-check below-view" appJsOnscroll [viewportCheck]=true [padding]=100
-        [checkAboveView]=false>
+         >
         <div class="title">
           <h3>MEAN Mess Manager</h3>
           <a class="github-link" href="https://github.com/Jayabratha/mean-demo-app">
@@ -74,7 +73,7 @@
         </div>
       </li>
       <li class="project project-card view-check below-view" appJsOnscroll [viewportCheck]=true [padding]=100
-        [checkAboveView]=false>
+         >
         <div class="title">
           <h3>Material Demo App</h3>
           <a class="github-link" href="https://github.com/Jayabratha/mean-mat-demo">
@@ -104,7 +103,7 @@
         </div>
       </li>
       <li class="project project-card view-check below-view" appJsOnscroll [viewportCheck]=true [padding]=100
-        [checkAboveView]=false>
+         >
         <div class="title">
           <h3>Angular Carousel</h3>
           <a class="github-link" href="https://github.com/Jayabratha/js-angular-carousel">
