Fixing Edge Trasition issue and style updates

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,30 +1,33 @@
 <div class="content about-content center-stage">
   <h1>About</h1>
-  <div class="content-wrapper view-check clearfix below-view" appJsOnscroll [viewportCheck]=true  >
-    <div class="main">
-      <h2>Hi! I am Jayabratha Saha, friends call me Jay.</h2>
-      <i class="icon-android-compass"></i>
-    </div>
-    <div class="feature-content">
-      <p>
-        I am a frontend developer with full stack experience and also an artist and designer by passion. As a developer
-        I mostly
-        work on web technologies currently focusing on MEAN(MongoDB, Express, Angular, NodeJS) technology stack. I love
-        creating
-        my own designs and open source components and always keep me involved in proof of concepts and projects on
-        latest
-        technologies.
-        <br />
-        <br /> Designing has always been with me even before I started loving technology. I use to design products as
-        well along
-        with portraits and paintings. Being a frontend developer, nowadays I am mostly into interface design that are
-        delightful
-        and accessible.
-      </p>
+  <div class="feature-wrapper">
+    <div class="content-wrapper view-check clearfix below-view" appJsOnscroll [viewportCheck]=true>
+      <div class="main">
+        <h2>Hi! I am Jayabratha Saha, friends call me Jay.</h2>
+        <i class="icon-android-compass"></i>
+      </div>
+      <div class="feature-content">
+        <p>
+          I am a frontend developer with full stack experience and also an artist and designer by passion. As a
+          developer
+          I mostly
+          work on web technologies currently focusing on MEAN(MongoDB, Express, Angular, NodeJS) technology stack. I
+          love
+          creating
+          my own designs and open source components and always keep me involved in proof of concepts and projects on
+          latest
+          technologies.
+          <br />
+          <br /> Designing has always been with me even before I started loving technology. I use to design products as
+          well along
+          with portraits and paintings. Being a frontend developer, nowadays I am mostly into interface design that are
+          delightful
+          and accessible.
+        </p>
+      </div>
     </div>
   </div>
-  <section class="my-tiles view-check below-view" appJsOnscroll [viewportCheck]=true [padding]=100  
-    (enteredViewport)="animateSkills()">
+  <section class="my-tiles view-check below-view" appJsOnscroll [viewportCheck]=true [padding]=100 (enteredViewport)="animateSkills()">
     <h2>Tech Skills</h2>
     <div class="skills-wrapper">
       <div class="tiles-container">
@@ -61,7 +64,7 @@
           </li>
         </ul>
       </div>
-      <p class="sub-desc below-view" appJsOnscroll [viewportCheck]=true [padding]=500  >
+      <p class="sub-desc below-view" appJsOnscroll [viewportCheck]=true [padding]=500>
         I am currently working on MEAN stack technologies specializing on front-end including TypeScript, Angular along
         with base web technologies. I have also experience in working with Ionic and Firebase.
       </p>
@@ -71,7 +74,7 @@
     <h2>Work Experience</h2>
     <div class="exp-container">
       <ul>
-        <li appJsOnscroll [viewportCheck]=true [padding]=100  >
+        <li appJsOnscroll [viewportCheck]=true [padding]=100>
           <div #expItem class="exp-wrapper clearfix">
             <div class="logo-wrapper">
               <img src="assets/sgm-logo.png" />
@@ -90,7 +93,7 @@
             </div>
           </div>
         </li>
-        <li appJsOnscroll [viewportCheck]=true [padding]=100  >
+        <li appJsOnscroll [viewportCheck]=true [padding]=100>
           <div #expItem class="exp-wrapper clearfix">
             <div class="logo-wrapper">
               <img src="assets/tcs-logo.png" />
