--- a/src/app/art/art.component.html
+++ b/src/app/art/art.component.html
@@ -1,24 +1,25 @@
 <div class="content art-content center-stage">
   <h1>Art</h1>
-  <div class="content-wrapper view-check clearfix below-view" appJsOnscroll [viewportCheck]=true  >
-    <div class="main">
-      <h2>A collection of my sketches and paintings</h2>
-      <i class="icon-android-color-palette"></i>
-    </div>
-    <div class="feature-content">
+  <div class="feature-wrapper">
+    <div class="content-wrapper view-check clearfix below-view" appJsOnscroll [viewportCheck]=true>
+      <div class="main">
+        <h2>A collection of my sketches and paintings</h2>
+        <i class="icon-android-color-palette"></i>
+      </div>
+      <div class="feature-content">
+      </div>
     </div>
   </div>
   <router-outlet></router-outlet>
-  <section class="list-wrapper" >
+  <section class="list-wrapper">
     <h2>Gallery</h2>
     <div class="loading-icon animate" [hidden]="!isLoading">
     </div>
     <div class="alert" [ngClass]="alertType" [hidden]="!alert">{{alert}}</div>
     <ul class="art-list clearfix" [hidden]="isLoading">
       <li id="{{item.id}}" class="image-item" *ngFor="let item of imageList" [ngClass]="{'potrait col-xs-6 col-sm-3 col-md-3 col-lg-3': item.isPortrait,
-                       'landscape col-xs-12 col-sm-6 col-md-6 col-lg-6': !item.isPortrait}"
-                       appJsOnscroll [viewportCheck]=true [padding]=100 >
-        <div class="image-wrapper" #elem (click)="showInGallery(item, elem)" [class.hide]="!item.visible">
+                       'landscape col-xs-12 col-sm-6 col-md-6 col-lg-6': !item.isPortrait}">
+        <div class="image-wrapper" #elem (click)="showInGallery(item, elem)" [class.hide]="!item.visible" >
           <img class="art-images" [title]="item.title" [src]="item.thumbUrl" (load)="updateProgress()" />
           <div class="image-title">{{item.title}}</div>
           <div class="shadow"></div>
