--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,13 +1,15 @@
 <div class="content blog-content center-stage">
   <h1>Blog</h1>
-  <div class="content-wrapper view-check below-view" appJsOnscroll [viewportCheck]=true  >
-    <div class="main">
-      <h2>My blogs posts</h2>
-      <i class="icon-ios-chatboxes"></i>
-    </div>
-    <div class="blog-card featured-blog">
-      <div class="title">
-        <h3>Coming soon..</h3>
+  <div class="feature-wrapper">
+    <div class="content-wrapper view-check below-view" appJsOnscroll [viewportCheck]=true>
+      <div class="main">
+        <h2>My blogs posts</h2>
+        <i class="icon-ios-chatboxes"></i>
+      </div>
+      <div class="blog-card featured-blog">
+        <div class="title">
+          <h3>Coming soon..</h3>
+        </div>
       </div>
     </div>
   </div>
