--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -1,15 +1,3 @@
-.featured-project {
-    position: relative;
-    float: left;
-    width: 60%;
-    min-height: 16em;
-    background: #FFFFFF;
-    font-size: 1.25em;
-    font-family: Roboto;
-    border: thin solid #efefef;
-    padding: 1em;
-}
-
 .all-projects-container {
     margin-top: 100px;
 }
@@ -26,11 +14,22 @@
     width: 48%;
     min-height: 300px;
     background: #FFFFFF;
-    padding: 1.5em 1.5em 4em;
+    padding: 1.5em 1.5em 7em;
     border: thin solid #efefef;
     box-shadow: 0 3px 10px rgba(56, 55, 55, 0.06);
     font-family: Roboto;
+    font-weight: 200;
     margin-bottom: 2em;
+}
+
+.project-card.featured-project {
+    position: relative;
+    float: left;
+    width: 60%;
+    min-height: 16em;
+    font-size: 1.25em;
+    padding: 1em;
+    box-shadow: none;
 }
 
 .title {
@@ -41,11 +40,9 @@
 }
 
 .title h3 {
-    font-family: Playfair Display;
-    font-weight: normal;
     font-size: 1.6em;
     margin: 0;
-    font-weight: normal;
+    font-weight: 200;
     margin-top: -0.2em;
 }
 
@@ -69,6 +66,10 @@
 .github-link i {
     font-size: 1.5em;
     padding: 5px 0 0 5px;
+}
+
+.desc {
+    padding: 0.5em 0 1.5em;
 }
 
 .footer {
