--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,43 +1,44 @@
 <div class="content projects-content center-stage">
   <h1>Projects</h1>
-  <div class="content-wrapper clearfix" appJsOnscroll [viewportCheck]=true>
-    <div class="main">
-      <h2>My hobby projects</h2>
-      <i class="icon-social-github"></i>
-    </div>
-    <div class="project featured-project">
-      <div class="title">
-        <h3>My Portfolio</h3>
-        <a class="github-link" href="https://github.com/Jayabratha/my-portfolio">        
-          <span>my-portfolio</span><i class="icon-social-github"></i>
-        </a>
+  <div class="feature-wrapper">
+    <div class="content-wrapper clearfix" appJsOnscroll [viewportCheck]=true>
+      <div class="main">
+        <h2>My hobby projects</h2>
+        <i class="icon-social-github"></i>
       </div>
-      <div class="desc">This project is my personal portfolio showcaseing my art works, projects and blog</div>
-      <div class="tags">
-        <ul class="tag-list">
-          <li>
-            <div class="tag-color firebase"></div>firebase
-          </li>
-          <li>
-            <div class="tag-color angular"></div>angular
-          </li>
-        </ul>
-      </div>
-      <div class="footer">
-        <a href="https://github.com/Jayabratha/my-portfolio">
-          <div class="button-wrapper">
-            <div class="background"></div>
-            <button routerLink="/projects">VIEW PROJECT</button>
+      <div class="project-card featured-project">
+        <div class="title">
+          <h3>My Portfolio</h3>
+          <a class="github-link" href="https://github.com/Jayabratha/my-portfolio">
+            <span>my-portfolio</span><i class="icon-social-github"></i>
+          </a>
+        </div>
+        <div class="desc">This project is my personal portfolio showcaseing my art works, projects and blog</div>
+        <div class="footer">
+          <div class="tags">
+            <ul class="tag-list">
+              <li>
+                <div class="tag-color firebase"></div>firebase
+              </li>
+              <li>
+                <div class="tag-color angular"></div>angular
+              </li>
+            </ul>
           </div>
-        </a>
+          <a href="https://github.com/Jayabratha/my-portfolio">
+            <div class="button-wrapper">
+              <div class="background"></div>
+              <button routerLink="/projects">VIEW PROJECT</button>
+            </div>
+          </a>
+        </div>
       </div>
     </div>
   </div>
-  <section class="all-projects-container" >
+  <section class="all-projects-container">
     <h2>All projects</h2>
     <ul class="project-list">
-      <li class="project project-card view-check below-view" appJsOnscroll [viewportCheck]=true [padding]=100
-         >
+      <li class="project project-card view-check below-view" appJsOnscroll [viewportCheck]=true [padding]=100>
         <div class="title">
           <h3>MEAN Mess Manager</h3>
           <a class="github-link" href="https://github.com/Jayabratha/mean-demo-app">
@@ -47,23 +48,23 @@
         </div>
         <div class="desc">This project is my first full-stack app using MEAN (MongoDB, ExpressJS, AngularJS, NodeJS)
           technologies. </div>
-        <div class="tags">
-          <ul class="tag-list">
-            <li>
-              <div class="tag-color angular-js"></div>angular-js
-            </li>
-            <li>
-              <div class="tag-color node"></div>node
-            </li>
-            <li>
-              <div class="tag-color express"></div>express
-            </li>
-            <li>
-              <div class="tag-color mongo"></div>mongo
-            </li>
-          </ul>
-        </div>
         <div class="footer">
+          <div class="tags">
+            <ul class="tag-list">
+              <li>
+                <div class="tag-color angular-js"></div>angular-js
+              </li>
+              <li>
+                <div class="tag-color node"></div>node
+              </li>
+              <li>
+                <div class="tag-color express"></div>express
+              </li>
+              <li>
+                <div class="tag-color mongo"></div>mongo
+              </li>
+            </ul>
+          </div>
           <a href="https://github.com/Jayabratha/mean-demo-app">
             <div class="button-wrapper">
               <div class="background"></div>
@@ -72,8 +73,7 @@
           </a>
         </div>
       </li>
-      <li class="project project-card view-check below-view" appJsOnscroll [viewportCheck]=true [padding]=100
-         >
+      <li class="project project-card view-check below-view" appJsOnscroll [viewportCheck]=true [padding]=100>
         <div class="title">
           <h3>Material Demo App</h3>
           <a class="github-link" href="https://github.com/Jayabratha/mean-mat-demo">
@@ -83,17 +83,17 @@
         </div>
         <div class="desc">This project is developed using Angular Material where design is the main focus using custom
           theme. Development of the backend using microservices architecture is in progress.</div>
-        <div class="tags">
-          <ul class="tag-list">
-            <li>
-              <div class="tag-color material"></div>material
-            </li>
-            <li>
-              <div class="tag-color angular"></div>angular
-            </li>
-          </ul>
-        </div>
         <div class="footer">
+          <div class="tags">
+            <ul class="tag-list">
+              <li>
+                <div class="tag-color material"></div>material
+              </li>
+              <li>
+                <div class="tag-color angular"></div>angular
+              </li>
+            </ul>
+          </div>
           <a href="https://github.com/Jayabratha/mean-microservices-demo">
             <div class="button-wrapper">
               <div class="background"></div>
@@ -102,8 +102,7 @@
           </a>
         </div>
       </li>
-      <li class="project project-card view-check below-view" appJsOnscroll [viewportCheck]=true [padding]=100
-         >
+      <li class="project project-card view-check below-view" appJsOnscroll [viewportCheck]=true [padding]=100>
         <div class="title">
           <h3>Angular Carousel</h3>
           <a class="github-link" href="https://github.com/Jayabratha/js-angular-carousel">
@@ -112,16 +111,16 @@
           </a>
         </div>
         <div class="desc">
-          This is highly customizable resuable carousel component built for Angular and supports touch gestures. 
-        </div>
-        <div class="tags">
-          <ul class="tag-list">
-            <li>
-              <div class="tag-color angular"></div>angular
-            </li>
-          </ul>
+          This is highly customizable resuable carousel component built for Angular and supports touch gestures.
         </div>
         <div class="footer">
+          <div class="tags">
+            <ul class="tag-list">
+              <li>
+                <div class="tag-color angular"></div>angular
+              </li>
+            </ul>
+          </div>
           <a href="https://github.com/Jayabratha/js-angular-carousel">
             <div class="button-wrapper">
               <div class="background"></div>
