--- a/src/styles.css
+++ b/src/styles.css
@@ -24,6 +24,12 @@
     font-weight: 200;
 }
 
+@font-face {
+    font-family: "Roboto";
+    src: url("assets/fonts/Roboto-Regular.ttf") format('truetype');
+    font-weight: 400;
+}
+
 * {
     box-sizing: border-box;
 }
